--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-handlebars": "^0.10.2",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "^1.0.1",
