--- a/package.json
+++ b/package.json
@@ -7,13 +7,31 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-concat": "latest",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-handlebars": "^0.10.2",
+    "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-remove-logging": "latest"
+    "grunt-encoding": "^0.3.0",
+    "grunt-file-creator": "^0.1.3",
+    "grunt-filerev": "^2.3.1",
+    "grunt-multi-language": "^0.1.1",
+    "grunt-name-changer": "^0.1.6",
+    "grunt-preprocess": "^4.1.0",
+    "grunt-remove-logging": "latest",
+    "grunt-rename": "^0.1.4",
+    "grunt-rev": "^0.1.0",
+    "grunt-sails-linker": "^0.10.1",
+    "grunt-script-link-tags": "^1.0.2",
+    "grunt-transcode": "0.0.3"
+  },
+  "dependencies": {
+    "imagemin": "^3.2.0",
+    "imagemin-jpegtran": "^4.1.0",
+    "mozjpeg": "^4.0.0"
   }
 }
